<resources>
    <string name="app_name">PetCare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arentYouAMemberText">Üye değil misiniz?</string>
    <string name="phoneNumber">Telefon Numarası</string>
    <string name="signUpNowText">Hemen Üye Ol</string>
    <string name="orText">veya</string>
    <string name="loginWithGoogleText">Google ile Giriş Yap</string>
    <string name="optionalPhoneNumberText">Telefon Numarası (Opsiyonel)</string>
    <string name="loginText">Giriş Yap</string>
    <string name="signUpText">ÜYE OL</string>
    <string name="alreadyAMemberText">Zaten üye misiniz?</string>
    <string name="signUpWithGoogleText">Google ile Üye Ol</string>
    <string name="emailText">E-posta</string>
    <string name="passwordText">Şifre</string>
    <string name="passwordAgainText">Şifre Tekrarı</string>
    <string name="resend_otp">Yeniden Gönder</string>
    <string name="resend_otp_timer">Kalan süre:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>