<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.authview.LoginFragment">


        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:errorEnabled="true"
                app:layout_editor_absoluteX="43dp"
                app:layout_editor_absoluteY="135dp">

                <EditText
                    android:id="@+id/userEmailAddress"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/background"
                    android:ems="10"
                    android:hint="@string/emailText"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPasswordLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_editor_absoluteX="43dp"
                app:layout_editor_absoluteY="200dp">

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/background"
                    android:hint="@string/passwordText"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/orText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPhoneNumberLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_editor_absoluteX="43dp"
                app:layout_editor_absoluteY="300dp">

                <EditText
                    android:id="@+id/userPhoneNumber"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/background"
                    android:ems="10"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/vetBlue"
                android:text="@string/loginText" />


        </LinearLayout>

        <CheckedTextView
            android:id="@+id/signUpNowCheckedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="137dp"
            android:text="@string/signUpNowText"
            android:textColor="@color/vetGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/arentYouAMemberText" />

        <TextView
            android:id="@+id/arentYouAMemberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:text="@string/arentYouAMemberText"
            app:layout_constraintBaseline_toBaselineOf="@+id/signUpNowCheckedText"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginWithGoogleButton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/gmail"
            android:text="@string/loginWithGoogleText"
            android:textAllCaps="false"
            android:textColor="@color/vetBlue"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/arentYouAMemberText"
            app:layout_constraintEnd_toEndOf="@+id/signUpNowCheckedText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
